--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-custom.cacheManager.redis.connection.url=redis://localhost:6379
-custom.cacheManager.redis.cache.key=cache
+spring.profiles.active=standalone
