change the api.service.base.url for heroku deployment

--- a/src/main/resources/application-standalone.properties
+++ b/src/main/resources/application-standalone.properties
@@ -1,2 +1,2 @@
 server.port=8082
-api.service.base.url=http://localhost:8082/api_service
+api.service.base.url=https://api-rate-limiter.herokuapp.com/api_service
